add jp-bank library

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -6,6 +6,9 @@
         <li>
           <a routerLink="/jp-post"><mat-icon>place</mat-icon> 住所検索</a>
         </li>
+        <li>
+          <a routerLink="/jp-bank"><mat-icon>account_balance</mat-icon> 銀行検索</a>
+        </li>
       </ul>
     </nav>
   </mat-sidenav>
